--- a/css/section_about.css
+++ b/css/section_about.css
@@ -1,10 +1,7 @@
 section.about {
   background: #F8F8F8 url(../images/main/section-1.svg) no-repeat 10% center;
   max-height: 774px;
-  padding-left: 191px;
-  padding-top: 200px;
-  padding-right: 220px;
-  padding-bottom: 240px;
+  padding: 200px 220px 240px 190px;
   justify-content: flex-end;
   display: flex;
 }
