--- a/css/footer.css
+++ b/css/footer.css
@@ -1,21 +1,22 @@
-.footer {
+.footer__container {
   background-color: #F8F8F8;
   display: flex;
   flex-direction: column;
-  padding: 30px 190px 30px;
+  padding: 30px 11.875rem;
 }
 
 .footer__upper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-family: 'Mulish';
   font-weight: 300;
-  font-size: 17px;
+  font-size: 1.0625rem;
   color: #848484;
   margin-bottom: 25px;
 }
 
-.footer hr {
+.footer__container hr {
   width: 100%;
   border: 0.6px solid #C4C4C4;
   margin-bottom: 30px;
@@ -27,10 +28,51 @@
 }
 
 .social-media a {
-  margin-right: 20px;
+  margin-right: 30px;
+}
+
+.social-media img {
   align-items: center;
   display: flex;
   border: none;
-  width: 40px;
-  height: 40px;
+  width: 1.875rem;
+  height: 1.875rem;
+}
+
+@media screen and (min-width: 2100px) {
+  .social-media img {
+    margin-right: 40px;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .footer__container {
+    padding: 30px 7rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .footer__container {
+    padding: 30px 3rem;
+  }
+
+  .footer__upper {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .footer__upper .logo {
+    display: none;
+  }
+
+  .footer__upper {
+    justify-content: center;
+  }
+
+  .social-media img {
+    width: 1rem;
+    height: 1rem;
+  }
 }
