--- a/css/section_about.css
+++ b/css/section_about.css
@@ -1,14 +1,62 @@
-section.about {
+section.about__container {
   background: #F8F8F8 url(../images/main/section-1.svg) no-repeat 10% center;
   max-height: 774px;
-  padding: 200px 220px 240px 190px;
+  padding: 12.5rem 12.5rem 240px;
   justify-content: flex-end;
   display: flex;
 }
 
+.about__content {
+  max-width: 445px;
+}
+
 .about__btn-learn-more {
-  width: 164px;
-  height: 48px;
+  width: 10.25rem;
+  height: 3rem;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1rem;
+}
+
+@media screen and (min-width: 2100px) {
+  section.about__container {
+    background-size: 60% 60%;
+    max-height: 774px;
+    padding: 12.5rem 8rem 240px;
+    justify-content: flex-end;
+    display: flex;
+  }
+
+  .about__content {
+    max-width: 650px;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  section.about__container {
+    padding: 12.5rem 7rem 240px;
+    background-position: top center;
+    height: 800px;
+    padding-bottom: 100px;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about__content {
+    max-width: 650px;
+    min-width: 350px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  section.about__container {
+    background-size: 100% 50%;
+    height: 700px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .about__content {
+    min-width: 250px;
+  }
 }
